# rTranslate

./: .gitignore  Cargo.toml  README.md  build.rs  build_win_dbg.bat  build_win_release.bat  build_win_release_x64.bat  rt-manifest.rc
.cargo/: config.toml
src/: app_state.rs  app_view.rs  bbcode.rs  google_translate.rs  google_translate2.rs  main.rs  nodejs_translator.rs  nodejs_tts.rs  prnn_wiki.rs  types.rs  user_dict.rs  wiktionary_en.rs
