[package]
name = "rTranslate"
version = "0.0.1"
authors = ["blackcat <gapchenko42@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
which = "8.0.0"
fltk = "^1.5"
#fltk-anchor = "0.2.0"
anyhow = "1.0.100"
#fltk = "1.5.10"
ureq = "=3.1.4"
image = "0.25.9"
tray-icon = "0.21.1"
mouse_position = "=0.1.4"
get-selected-text = "=0.1.6" #todo: high ram usage
unicode-truncate = "2.0.1"
global-hotkey = "0.7.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
twox-hash = "2.1.2"
strum = "0.27.2"
strum_macros = "0.27.2"
#awedio = "0.6.0"
rodio = { version = "0.21.1", features = ["playback"] }
regex = "1.12.3"
fancy-regex = "0.17.0"
serde = "1.0.228"
serde_json = "1.0.149"
json5 = "1.3.1"
#whichlang = "0.1.1"
#isolang = { version = "2.4.0", default-features = false }
whatlang = "0.18.0"
fltk-theme = "0.7"
#colornames = "0.0.6"
#fltk-richtext = "0.1.1"
#windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }

#[target.'cfg(target_os = "windows")'.dependencies]
#native-windows-gui = { version = "1.0.10", default-features=false, features=["tray-notification", "message-window", "menu", "cursor"] }

[build-dependencies]
embed-resource = "1.8"
winres = "0.1.12"

[profile.release]
strip = true
codegen-units = 1
#panic = "abort"
lto = true

